# MemTools

./: .gitignore  CMakeLists.txt  DirectMemoryTools.cpp  DirectMemoryTools.h  DmaMemoryTools.cpp  DmaMemoryTools.h  DumpMemoryTools.cpp  DumpMemoryTools.h  InjectMemoryTools.cpp  InjectMemoryTools.h  MemoryToolsBase.cpp  MemoryToolsBase.h  README.md  Type.h  dump.cpp  main.cpp
dmaLibs/include/: leechcore.h  vmmdll.h
example/: dump.cpp  injectDLL.cpp  injectTest.cpp
